--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "chart.js": "^2.7.1",
+        "font-awesome": "^4.7.0",
+        "jquery.cookie": "^1.4.1",
+        "messenger-hubspot": "^1.5.0-b2"
     }
 }
