--- a/package.json
+++ b/package.json
@@ -12,17 +12,28 @@
     "devDependencies": {
         "axios": "^0.17",
         "bootstrap": "^4.0.0",
-        "popper.js": "^1.12",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "popper.js": "^1.12",
+        "vue": "^2.5.13"
     },
     "dependencies": {
+        "bootstrap-datepicker": "^1.7.1",
+        "bootstrap-select": "^1.12.4",
+        "bootstrap-tagsinput": "^0.7.1",
+        "bootstrap-touchspin": "^3.1.1",
         "chart.js": "^2.7.1",
+        "datatables.net": "^1.10.16",
+        "datatables.net-bs4": "^1.10.16",
+        "datatables.net-responsive": "^2.2.1",
+        "datatables.net-responsive-bs4": "^2.2.1",
         "font-awesome": "^4.7.0",
+        "gaugeJS": "^1.3.5",
+        "jquery-sparkline": "^2.4.0",
         "jquery.cookie": "^1.4.1",
-        "messenger-hubspot": "^1.5.0-b2"
+        "messenger-hubspot": "^1.5.0-b2",
+        "nouislider": "^11.0.3"
     }
 }
