--- a/package.json
+++ b/package.json
@@ -20,20 +20,26 @@
         "vue": "^2.5.13"
     },
     "dependencies": {
+        "bootstrap-3-typeahead": "^4.0.2",
         "bootstrap-datepicker": "^1.7.1",
         "bootstrap-select": "^1.12.4",
         "bootstrap-tagsinput": "^0.7.1",
         "bootstrap-touchspin": "^3.1.1",
         "chart.js": "^2.7.1",
+        "codemirror": "^5.34.0",
         "datatables.net": "^1.10.16",
         "datatables.net-bs4": "^1.10.16",
         "datatables.net-responsive": "^2.2.1",
         "datatables.net-responsive-bs4": "^2.2.1",
+        "dropzone": "^5.3.0",
         "font-awesome": "^4.7.0",
         "gaugeJS": "^1.3.5",
+        "jasny-bootstrap": "^3.1.3",
         "jquery-sparkline": "^2.4.0",
         "jquery.cookie": "^1.4.1",
         "messenger-hubspot": "^1.5.0-b2",
-        "nouislider": "^11.0.3"
+        "multiselect": "^0.9.12",
+        "nouislider": "^11.0.3",
+        "summernote": "^0.8.9"
     }
 }
