--- a/package.json
+++ b/package.json
@@ -33,11 +33,15 @@
         "datatables.net-responsive-bs4": "^2.2.1",
         "dropzone": "^5.3.0",
         "font-awesome": "^4.7.0",
+        "fullcalendar": "^3.8.2",
         "gaugeJS": "^1.3.5",
         "jasny-bootstrap": "^3.1.3",
         "jquery-sparkline": "^2.4.0",
         "jquery.cookie": "^1.4.1",
+        "ladda": "^1.0.6",
+        "lightbox2": "^2.10.0",
         "messenger-hubspot": "^1.5.0-b2",
+        "moment": "^2.20.1",
         "multiselect": "^0.9.12",
         "nouislider": "^11.0.3",
         "summernote": "^0.8.9"
