--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "bootstrap-touchspin": "^3.1.1",
         "chart.js": "^2.7.1",
         "codemirror": "^5.34.0",
+        "cross-spawn": "^6.0.4",
         "datatables.net": "^1.10.16",
         "datatables.net-bs4": "^1.10.16",
         "datatables.net-responsive": "^2.2.1",
