--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,15 @@
     "guzzlehttp/guzzle": "^6.3",
     "laravel/framework": "5.6.*",
     "laravel/tinker": "~1.0",
+    "nwidart/laravel-modules": "^3.0",
     "symfony/dom-crawler": "^4.0"
   },
   "require-dev": {
-    "barryvdh/laravel-ide-helper": "^2.4",
     "barryvdh/laravel-debugbar": "^3.1",
+    "barryvdh/laravel-ide-helper": "^2.4",
     "filp/whoops": "~2.0",
     "fzaninotto/faker": "~1.4",
+    "laravel/dusk": "^3.0",
     "mockery/mockery": "~1.0",
     "nunomaduro/collision": "~1.1",
     "phpunit/phpunit": "~7.0",
@@ -32,7 +34,8 @@
       "database/factories"
     ],
     "psr-4": {
-      "App\\": "app/"
+      "App\\": "app/",
+      "Modules\\": "Modules/"
     }
   },
   "autoload-dev": {
