Add module -=Dev=- for work with library DevExtreme -- Add CSS -- Add JS

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,39 @@
     "/js/components.js": "/js/components.js",
     "/css/app.css": "/css/app.css",
     "/devextreme/css/style.css": "/devextreme/css/style.css",
-    "/devextreme/js/devall.js": "/devextreme/js/devall.js"
+    "/devextreme/js/devall.js": "/devextreme/js/devall.js",
+    "/Modules/Dev/Resources/assets/js/script_dev.js": "/Modules/Dev/Resources/assets/js/script_dev.js",
+    "/Modules/Dev/Resources/assets/js/cldr.js": "/Modules/Dev/Resources/assets/js/cldr.js",
+    "/Modules/Dev/Resources/assets/js/event.js": "/Modules/Dev/Resources/assets/js/event.js",
+    "/Modules/Dev/Resources/assets/js/upplemental.js": "/Modules/Dev/Resources/assets/js/upplemental.js",
+    "/Modules/Dev/Resources/assets/js/globalize.js": "/Modules/Dev/Resources/assets/js/globalize.js",
+    "/Modules/Dev/Resources/assets/js/message.js": "/Modules/Dev/Resources/assets/js/message.js",
+    "/Modules/Dev/Resources/assets/js/number.js": "/Modules/Dev/Resources/assets/js/number.js",
+    "/Modules/Dev/Resources/assets/js/currency.js": "/Modules/Dev/Resources/assets/js/currency.js",
+    "/Modules/Dev/Resources/assets/js/date.js": "/Modules/Dev/Resources/assets/js/date.js",
+    "/Modules/Dev/Resources/assets/js/jszip.js": "/Modules/Dev/Resources/assets/js/jszip.js",
+    "/Modules/Dev/Resources/assets/css/style_dev.css": "/Modules/Dev/Resources/assets/css/style_dev.css",
+    "/Modules/Dev/Resources/assets/css/dx.light.css": "/Modules/Dev/Resources/assets/css/dx.light.css",
+    "/Modules/Dev/Resources/assets/css/dx.dark.css": "/Modules/Dev/Resources/assets/css/dx.dark.css",
+    "/Modules/Dev/Resources/assets/css/dx.android5.light.css": "/Modules/Dev/Resources/assets/css/dx.android5.light.css",
+    "/Modules/Dev/Resources/assets/css/dx.carmine.compact.css": "/Modules/Dev/Resources/assets/css/dx.carmine.compact.css",
+    "/Modules/Dev/Resources/assets/css/dx.carmine.css": "/Modules/Dev/Resources/assets/css/dx.carmine.css",
+    "/Modules/Dev/Resources/assets/css/dx.contrast.compact.css": "/Modules/Dev/Resources/assets/css/dx.contrast.compact.css",
+    "/Modules/Dev/Resources/assets/css/dx.contrast.css": "/Modules/Dev/Resources/assets/css/dx.contrast.css",
+    "/Modules/Dev/Resources/assets/css/dx.dark.compact.css": "/Modules/Dev/Resources/assets/css/dx.dark.compact.css",
+    "/Modules/Dev/Resources/assets/css/dx.darkmoon.compact.css": "/Modules/Dev/Resources/assets/css/dx.darkmoon.compact.css",
+    "/Modules/Dev/Resources/assets/css/dx.darkmoon.css": "/Modules/Dev/Resources/assets/css/dx.darkmoon.css",
+    "/Modules/Dev/Resources/assets/css/dx.darkviolet.compact.css": "/Modules/Dev/Resources/assets/css/dx.darkviolet.compact.css",
+    "/Modules/Dev/Resources/assets/css/dx.darkviolet.css": "/Modules/Dev/Resources/assets/css/dx.darkviolet.css",
+    "/Modules/Dev/Resources/assets/css/dx.greenmist.compact.css": "/Modules/Dev/Resources/assets/css/dx.greenmist.compact.css",
+    "/Modules/Dev/Resources/assets/css/dx.greenmist.css": "/Modules/Dev/Resources/assets/css/dx.greenmist.css",
+    "/Modules/Dev/Resources/assets/css/dx.ios7.default.css": "/Modules/Dev/Resources/assets/css/dx.ios7.default.css",
+    "/Modules/Dev/Resources/assets/css/dx.light.compact.css": "/Modules/Dev/Resources/assets/css/dx.light.compact.css",
+    "/Modules/Dev/Resources/assets/css/dx.softblue.compact.css": "/Modules/Dev/Resources/assets/css/dx.softblue.compact.css",
+    "/Modules/Dev/Resources/assets/css/dx.softblue.css": "/Modules/Dev/Resources/assets/css/dx.softblue.css",
+    "/Modules/Dev/Resources/assets/css/dx.spa.css": "/Modules/Dev/Resources/assets/css/dx.spa.css",
+    "/Modules/Dev/Resources/assets/css/dx.win8.black.css": "/Modules/Dev/Resources/assets/css/dx.win8.black.css",
+    "/Modules/Dev/Resources/assets/css/dx.win8.white.css": "/Modules/Dev/Resources/assets/css/dx.win8.white.css",
+    "/Modules/Dev/Resources/assets/css/dx.win10.black.css": "/Modules/Dev/Resources/assets/css/dx.win10.black.css",
+    "/Modules/Dev/Resources/assets/css/dx.win10.white.css": "/Modules/Dev/Resources/assets/css/dx.win10.white.css"
 }
