--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "bootstrap-tagsinput": "^0.7.1",
         "bootstrap-touchspin": "^3.1.1",
         "chart.js": "^2.7.1",
+        "cldr-data": "^32.0.1",
+        "cldrjs": "^0.5.0",
         "codemirror": "^5.34.0",
         "cross-spawn": "^6.0.4",
         "datatables.net": "^1.10.16",
@@ -37,6 +39,7 @@
         "font-awesome": "^4.7.0",
         "fullcalendar": "^3.8.2",
         "gaugeJS": "^1.3.5",
+        "globalize": "^1.3.0",
         "jasny-bootstrap": "^3.1.3",
         "jquery-sparkline": "^2.4.0",
         "jquery.cookie": "^1.4.1",
