Шаблон для курсов валют

--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:DbvigOP6kz+J6KnpLxIYHIuyrOx4fu70WfHjp0+iXyM=
-APP_DEBUG=false
-APP_URL=http://eshopbas
+APP_DEBUG=true
+APP_URL=http://111eshopbas
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=ncoamitd_basdb
-DB_USERNAME=basket
-DB_PASSWORD=basket
+DB_DATABASE=ncoamitd_eshopbas
+DB_USERNAME=ncoamitd_laraveluser
+DB_PASSWORD=ncoamitd_laravelpass
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
