Доработки для Блога

--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://eshopbas
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=192.168.0.105
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=ncoamitd_basdb
-DB_USERNAME=basket
-DB_PASSWORD=basket
+DB_USERNAME=ncoamitd_basket
+DB_PASSWORD=last2move0crew00
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
