--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "multiselect": "^0.9.12",
         "nouislider": "^11.0.3",
         "respond.js": "^1.4.2",
+        "select2-bootstrap4-theme": "^1.0.0",
         "summernote": "^0.8.9",
         "video.js": "^6.9.0",
         "videojs-playbackrate-adjuster": "^1.0.0",
