--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_URL=http://eshopbas
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=192.168.0.105
 DB_PORT=3306
 DB_DATABASE=ncoamitd_basdb
 DB_USERNAME=ncoamitd_basket
