Videoplayer for watching video from Coursehunter

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -38,6 +38,11 @@
     "/Modules/Dev/Resources/assets/css/dx.win8.white.css": "/Modules/Dev/Resources/assets/css/dx.win8.white.css",
     "/Modules/Dev/Resources/assets/css/dx.win10.black.css": "/Modules/Dev/Resources/assets/css/dx.win10.black.css",
     "/Modules/Dev/Resources/assets/css/dx.win10.white.css": "/Modules/Dev/Resources/assets/css/dx.win10.white.css",
+    "/Modules/Dev/Resources/assets/css/dx.material.blue.light.css": "/Modules/Dev/Resources/assets/css/dx.material.blue.light.css",
+    "/Modules/Dev/Resources/assets/css/dx.material.lime.light.css": "/Modules/Dev/Resources/assets/css/dx.material.lime.light.css",
+    "/Modules/Dev/Resources/assets/css/dx.material.orange.light.css": "/Modules/Dev/Resources/assets/css/dx.material.orange.light.css",
+    "/Modules/Dev/Resources/assets/css/dx.material.purple.light.css": "/Modules/Dev/Resources/assets/css/dx.material.purple.light.css",
+    "/dx.material.teal.light.css": "/dx.material.teal.light.css",
     "/Modules/Blog/Resources/assets/css/Blog_admin.css": "/Modules/Blog/Resources/assets/css/Blog_admin.css",
     "/Modules/Blog/Resources/assets/js/Blog_admin.js": "/Modules/Blog/Resources/assets/js/Blog_admin.js",
     "/Modules/Course/Resources/assets/css/Course_videojs.css": "/Modules/Course/Resources/assets/css/Course_videojs.css",
