--- a/package.json
+++ b/package.json
@@ -12,35 +12,35 @@
     "devDependencies": {
         "admin-lte": "^3.0.0-alpha.2",
         "axios": "^0.17",
-        "bootstrap": "^4.0.0",
-        "cross-env": "^5.1",
+        "bootstrap": "^4.1.1",
+        "cross-env": "^5.1.6",
         "jquery": "^3.2",
-        "laravel-mix": "^2.0",
-        "lodash": "^4.17.4",
-        "popper.js": "^1.12",
-        "vue": "^2.5.13"
+        "laravel-mix": "^2.1.11",
+        "lodash": "^4.17.10",
+        "popper.js": "^1.14.3",
+        "vue": "^2.5.16"
     },
     "dependencies": {
         "bootstrap-3-typeahead": "^4.0.2",
-        "bootstrap-datepicker": "^1.7.1",
+        "bootstrap-datepicker": "^1.8.0",
         "bootstrap-sass": "^3.3.7",
-        "bootstrap-select": "^1.12.4",
+        "bootstrap-select": "^1.13.1",
         "bootstrap-tagsinput": "^0.7.1",
         "bootstrap-touchspin": "^3.1.1",
-        "chart.js": "^2.7.1",
+        "chart.js": "^2.7.2",
         "cldr-data": "^32.0.1",
         "cldrjs": "^0.5.0",
-        "codemirror": "^5.34.0",
-        "cross-spawn": "^6.0.4",
+        "codemirror": "^5.38.0",
+        "cross-spawn": "^6.0.5",
         "datatables.net": "^1.10.16",
         "datatables.net-bs4": "^1.10.16",
         "datatables.net-responsive": "^2.2.1",
         "datatables.net-responsive-bs4": "^2.2.1",
-        "devextreme": "^17.2.5",
-        "dropzone": "^5.3.0",
+        "devextreme": "^18.1.3",
+        "dropzone": "^5.4.0",
         "font-awesome": "^4.7.0",
-        "fullcalendar": "^3.8.2",
-        "gaugeJS": "^1.3.5",
+        "fullcalendar": "^3.9.0",
+        "gaugeJS": "^1.3.6",
         "globalize": "^1.3.0",
         "html5shiv": "^3.7.3",
         "jasny-bootstrap": "^3.1.3",
@@ -48,14 +48,14 @@
         "jquery.cookie": "^1.4.1",
         "ladda": "^1.0.6",
         "lightbox2": "^2.10.0",
-        "messenger-hubspot": "^1.5.0-b2",
-        "moment": "^2.20.1",
+        "messenger-hubspot": "^1.5.0",
+        "moment": "^2.22.1",
         "multiselect": "^0.9.12",
-        "nouislider": "^11.0.3",
+        "nouislider": "^11.1.0",
         "respond.js": "^1.4.2",
         "select2-bootstrap4-theme": "^1.0.0",
-        "summernote": "^0.8.9",
-        "video.js": "^6.9.0",
+        "summernote": "^0.8.10",
+        "video.js": "^6.10.1",
         "videojs-playbackrate-adjuster": "^1.0.0",
         "videojs-playlist": "^4.2.0",
         "videojs-playlist-ui": "^3.4.0"
